resources/screen-mobile.less
/**
 * Gongbi Skin
 * © 2015-2021 Issara
 * © 2022 WaitSpring
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License along
 * with this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 */
@import 'variables.less';

// Override default here because mobile narrow
@content-padding: 0.5em;

/* Layout */

#mw-data-after-content {
	padding: 0 @content-padding;
}

#p-variants-desktop,
#mw-page-header-links #ca-view,
#page-tools h2,
#page-more h2,
#other-languages h2,
#p-logo {
	display: none;
}

#mw-header-container {
	background: @background;
	border-bottom: solid 4px @blue;
}

#mw-header {
	.flex-display;
	flex-wrap: wrap;
	align-items: center;
	justify-content: space-between;
}

#p-search {
	.flex(1, 1, 100%, 4);
	margin: 0.25em 1em;

	.sidebar-inner {
		left: 0;
		max-width: 100%;
	}
}

/* Dropdowns */
.sidebar-inner,
.dropdown {
	display: none;
	.nav-block();
	background: @background;
	box-shadow: 0 2px 3px 1px rgba( 0, 0, 0, 0.05 );
	position: absolute;
	padding: 1em 2.5em;
	margin: 0;
	right: 0;
	top: 5.75em;
	min-width: 9em;
	max-width: 320px;
	max-height: calc( 90vh - 5.75em );
	overflow-y: scroll;
	overflow-x: visible;
	z-index: 100;

	h3 {
		margin: 0.5em 0 1.5em;
	}

	ul {
		margin: 1em 0;
	}

	li {
		display: inline-block;
		margin: 0.5em 1em 0.5em 0;
		white-space: nowrap;
		word-break: keep-all;
	}
}

#menus-cover {
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	z-index: 99;
	width: 100%;
	height: 100%;
	background: @base80;
	opacity: 0.8;
	overflow: hidden;
}

/* Dropdown toggles */
#site-functions {
	.flex-display;
	align-items: center;
	.flex(0, 1, auto, 2);
	margin-left: 1.5em;

	#sidebar-tools {
		.flex(0, 1, auto, 1);
		margin-right: 0.75em;
	}

	#search-button {
		.flex(0, 1, auto, 2);
		margin-left: 0.75em;
	}
}

#user-tools {
	.flex-display;
	align-items: center;
	.flex(0, 1, auto, 3);
	margin-right: 1.25em;

	#personal {
		.flex(1, 1, auto, 2);
	}
}

#user-tools h2,
#sidebar-tools h2,
#search-button h2,
.sidebar-chunk h2 {
	cursor: pointer;
	margin: 0;
	width: 20px;
	height: 20px;
	padding-bottom: 0;
	font-size: 1em;
	background-repeat: no-repeat;
	background-position: center center;

	span {
		display: inline-block;
		.icon();
	}
}

#user-tools h2,
#sidebar-tools h2 {
	align-items: center;
}

#user-tools h2 {
	background-image: url( images/user-grey.svg );
	background-size: 18px;
	padding: 0.4em 0 0.35em;
	margin-left: 0.5em;
}

#sidebar-tools h2,
#search-button h2,
.sidebar-chunk h2 {
	background-size: 20px;
}

#sidebar-tools h2 {
	background-image: url( images/menu-grey.svg );
}

#search-button h2 {
	background-image: url( images/search-ltr.svg );
}

.mw-content-rtl #search-button h2 {
	background-image: url( images/search-rtl.svg );
}

#site-navigation {
	h2 {
		display: none;

		&:after {
			display: none;
		}
	}

	.sidebar-inner {
		left: 0;
		right: auto;
	}
}

/* Toggle buttons */
.mobile-close-button {
	display: none;
	.nav-block();
	cursor: pointer;
	background-color: @background;
	background-position: center center;
	background-repeat: no-repeat;
	background-image: url( images/close-grey.svg );
	background-size: 18px;
	box-shadow: 0 2px 3px 1px rgba( 0, 0, 0, 0.05 );
	position: absolute;
	padding: 1em 0;
	margin: 0;
	right: 0;
	top: 3.75em;
	width: 2em;
	z-index: 100;
}

#site-navigation .mobile-close-button {
	left: 1em;
}

#p-search  .mobile-close-button {
	left: 3.75em;
}

#mw-related-navigation .mobile-close-button {
	padding: 1em 0.25em;
}

#user-tools #personal .mobile-close-button {
	right: 1em;
}

/* Logo */

#p-logo-text {
	.flex(1, 1, 100%, 1);

	a {
		line-height: 2;
		max-width: 6em;
	}
}

/* Page actions */

#p-namespaces li {
	margin-right: 1.5em;
}

.tools-inline li a,
.tools-inline li[ id^='ca-nstab-' ] a {
	.ca-icon-only();
}

#ca-tools,
#ca-more,
#ca-languages {
	&:after {
		margin-left: -0.35em;
	}

	span {
		.ca-icon-only();
		display: inline-block;
		overflow: visible;
		width: 20px;
		height: 20px;
		margin-right: 7.5px;
	}
}

#ca-tools span {
	background-image: url( images/gear-grey.svg );
	background-repeat: no-repeat;
	background-size: 20px;
}

#ca-more span {
	background-image: url( images/more-grey.svg );
	background-repeat: no-repeat;
	background-size: 20px;
}

#ca-languages span {
	background-image: url( images/languages-grey.svg );
	background-repeat: no-repeat;
	background-size: 20px;
}

/* Full-width thumbnails */

div.thumb {
	float: none;
}

.thumb {
	margin: 1em auto;
}

.floatright,
.tright {
	margin-left: 0;
	padding-left: 0;
}

.floatleft,
.tleft {
	margin-right: 0;
	padding-right: 0;
}

.thumbinner {
	padding: 1em 1.5em;
	width: 100% !important;
	box-sizing: border-box;
}

.thumbimage {
	display: block;
	margin: 0 auto 0.5em;
}

figure[ typeof~='mw:File/Thumb' ],
figure[ typeof~='mw:File/Frame' ],
/* TODO: Remove "Image|Video|Audio" when version 2.4.0 of the content is no
 * longer supported
 */
figure[ typeof~='mw:Image/Thumb' ],
figure[ typeof~='mw:Video/Thumb' ],
figure[ typeof~='mw:Audio/Thumb' ],
figure[ typeof~='mw:Image/Frame' ],
figure[ typeof~='mw:Video/Frame' ],
figure[ typeof~='mw:Audio/Frame' ] {
	width: 100% !important;

	> a:first-child,
	> span:first-child {
		> *:first-child {
			margin: 1em 1.5em;
		}
	}

	> figcaption {
		padding: 0 1.5em 1em 1.5em;
	}
}

// FIXME: Clear the magnify clip for now
figure[ typeof~='mw:File/Thumb' ]:not( [ typeof~='mw:Error' ] ),
/* TODO: Remove "Image|Video|Audio" when version 2.4.0 of the content is no
 * longer supported
 */
figure[ typeof~='mw:Image/Thumb' ]:not( [ typeof~='mw:Error' ] ),
figure[ typeof~='mw:Video/Thumb' ]:not( [ typeof~='mw:Error' ] ),
figure[ typeof~='mw:Audio/Thumb' ]:not( [ typeof~='mw:Error' ] ) {
	> figcaption:before {
		content: none;
	}

	> a:after {
		content: none;
	}
}

.mw-body {
	border: 0;

	table {
		width: 100%;
		margin-left: 0;
		margin-right: 0;

		table {
			// HOLD ON WHAT ABORT ABORT
			width: unset;
			margin-left: unset;
			margin-right: unset;
		}
	}
}

#mw-content {
	padding: 1em 1.5em 2em;
	border-width: 0;
}

#mw-content-block {
	background: @background;
}

/* Table of contents */
.toc,
.mw-warning {
	width: 100%;
	box-sizing: border-box;
}

/* Misc */
.nomobile {
	display: none;
}

// Recent changes
.mw-changeslist-legend {
	float: none;
	margin: 0 0 0 auto;
	width: 200px;
}

.mw-changeslist-line {
	margin-left: 0 !important;
}

td.mw-enhanced-rc-nested {
	padding-left: 0 !important;
}

